--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
 <br>
 <br>
 <a href="zadanie4.html" style="color:purple;">zadanie 4</a>
+<br>
+<br>
+<a href="zadanie5.html" style="color: cadetblue;">zadanie 5</a>
 </body>
 </html>
