--- a/zadanie5.html
+++ b/zadanie5.html
@@ -6,7 +6,7 @@
     <title>Krzyżówka i Widget</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="zadanie4.css">i
+    <link rel="stylesheet" href="zadanie4.css">
     <style>
         body {
             font-family: 'Lato', sans-serif;
