--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
 <br>
 <br>
 <a href="zadanie5.html" style="color: cadetblue;">zadanie 5</a>
+<br>
+<br>
+<a href="https://naughty-goldstine-97f659.netlify.app/">Zadanie 6</a>
 </body>
 </html>
