--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 <a href="zadanie5.html" style="color: cadetblue;">zadanie 5</a>
 <br>
 <br>
-<a href="https://naughty-goldstine-97f659.netlify.app/">Zadanie 6</a>
+<a href="http://zadanie6cms.prv.pl/">Zadanie 6 cms</a>
+<br>
+<br>
+<a href="zadanie7.php">Zadanie 7</a>
 </body>
 </html>
