--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 <a href="http://zadanie6cms.prv.pl/">Zadanie 6 cms</a>
 <br>
 <br>
-<a href="zadanie7.php">Zadanie 7</a>
+<a href="https://zadaniephpp.prv.pl/">Zadanie 7</a>
 </body>
 </html>
