--- a/index.html
+++ b/index.html
@@ -28,5 +28,11 @@
 <br>
 <br>
 <a href="https://zadaniephpp.prv.pl/">Zadanie 7</a>
+<br>
+<br>
+<a href="http://zadanie8.prv.pl/">Zadanie 8</a>
+<br>
+<br>
+<a href="http://zadanie9.prv.pl/">zadanie 9</a>
 </body>
 </html>
